src/styles/_components.homepage-hero.scss
$bp-hero-lg: 1200px;

.c-homepage-hero {
  display: flex;
  flex-direction: column;
  margin-bottom: 4rem;
  
  @media (min-width: $bp-md) {
    display: grid;
    grid-template-columns: 45% 55%;
    grid-template-rows: min-content min-content;
  }

  @media (min-width: $bp-hero-lg) {
    grid-template-columns: 40% 60%;
  }
}

.c-homepage-hero__primary {
  order: 2;

  position: relative;
  margin-right: 5vw;
  z-index: 2;

  @media (min-width: $bp-md) {
    order: 1;
  }
}

.c-homepage-hero__secondary {
  order: 1;

  display: flex;
  width: 100%;
  z-index: 2;
  overflow: hidden;
  position: relative;

  padding-left: var(--v-page-margin);
  padding-top: 5vh;

  height: 45vh;
  
  @media (min-width: $bp-sm) {
    padding-top: 3.5vh;
    height: 55vh;
  }

  @media (min-width: $bp-md) {
    padding-right: calc(var(--v-page-margin) / 2);
    height: auto;
    order: 2;
    padding: 0;
    overflow: visible;
  }

  @media (min-width: $bp-hero-lg) {
    padding-right: var(--v-page-margin);
  }

  // Gradient fade
  @media (max-width: $bp-md) {
    &::after {
      content: '';
      position: absolute;
      bottom: -0.25rem;
      left: 0;
      right: 0;
      height: 10vh;
      z-index: 10;

      background: linear-gradient(rgba($c-grayscale-1,0), rgba($c-grayscale-1,0.10) 20%, rgba($c-grayscale-1,0.6) 50%, rgba($c-grayscale-1,0.85) 75%, rgba($c-grayscale-1,0.97) 90%, rgba($c-grayscale-1,1) 95%);
    }
  }
}

.c-homepage-hero__images-column-inner {
  position: relative;
  
  @media (min-width: $bp-sm) {
    flex: 1 1 30%;
    display: flex;
    flex-direction: row;
    align-items: flex-start;
    margin-top: 1rem;
  }

  @media (min-width: $bp-hero-lg) {
    margin-top: -1.0625rem;
  }
}

.c-homepage-hero__image-frame {
  width: 55vw;
  position: absolute;
  top: 0;
  
  flex: 1;
  padding: 0.5rem;

  border-radius: 9.44vw;
  background: var(--c-white-lock, #FFF);
  box-shadow: 0px 36px 70px -12px rgba(0, 0, 0, 0.21),
  0px 2.5px 8px 5px rgba(0, 0, 0, 0.03),
  0px 0px 9px 0px rgba(0, 0, 0, 0.16) inset,
  0px -8px 8px -3px rgba(0, 0, 0, 0.08) inset;

  @media (min-width: $bp-sm) {
    width: 46vw;
  }

  @media (min-width: $bp-md) {
    border-radius: 3.75vw;
    width: 50%;
    position: relative;
  }
  
  @media (min-width: $bp-lg) {
    padding: 0.75rem;
  }
  
  // Hide until revealed with JS transition
  opacity: 0;

  &:first-child {
    z-index: 2;
    margin-top: 17.5vw;
    
    @media (min-width: $bp-md) {
      margin-top: 10vw;
      margin-right: 3.5vw;
    }

    @media (min-width: $bp-hero-lg) {
      margin-right: 5vw;
    }
  }

  &:last-child {
    left: 44.5vw;
    z-index: 1;

    @media (min-width: $bp-sm) {
      left: 41vw;
    }

    @media (min-width: $bp-md) {
      left: auto;
    }
  }
}

.c-homepage-hero__image-mask {
  width: 100%;
  height: 0;
  padding-bottom: 190%; // 16:9 intrinsic ratio + extra
  border-radius: 8vw;
  
  position: relative;
  z-index: 2;
  overflow: hidden;
  
  @media (min-width: $bp-md) {
    border-radius: 2.91vw;
  }
}

.c-homepage-hero__text-container {
  padding-left: var(--v-page-margin);
  padding-top: 3.5vh;

  @media (max-width: $bp-md) {
    display: grid;
    grid-template-columns: auto auto;
    column-gap: 2rem;
  }

  @media (min-width: $bp-md) {
    padding-top: 18vw;
  }
}

.c-homepage-hero__icon {
  margin-bottom: 0.25rem;

  @media (min-width: $bp-md) {
    position: absolute;
    left: -2.25rem;
    top: -0.125rem;
  }
}

.c-homepage-hero__intro {
  opacity: 0;
  display: block;

  font-family: var(--v-font-display);
  font-weight: 300;
  font-size: 1.75rem;
  line-height: 105%;
  letter-spacing: -0.0675rem;
  margin-bottom: 4rem;

  @media (max-width: $bp-md) {
    grid-column: 1 / 3;
  }
  
  @media (min-width: $bp-md) {
    font-size: 2.25rem;
  }
}

.c-homepage-hero__detail-container:last-child {
  @media (max-width: $bp-md) {
    grid-column: 1 / 3;
  }
}

.c-homepage-hero__detail {
  opacity: 0;
  display: block;
  margin-bottom: 2rem;
}

.c-homepage-hero__heading {
  grid-column: 1 / 3;
  padding: 12.5vh 0 0 var(--v-page-margin);
  margin: 0;
  color: var(--c-black);
  
  @media (min-width: $bp-md) {
    padding-top: 20vh;
  }

  span {
    display: inline-block;
    opacity: 0;
    margin-right: -0.0625rem;
  }

  .with-space {
    margin-right: 1rem;

    @media (max-width: $bp-md) {
      display: block;
    }
  }
}

.c-homepage-hero__list {
  display: grid;
  grid-template-columns: auto auto;
  column-gap: 2rem;
  margin-top: -1rem;
}



// Transition Variables
$transition-heading-time:  1200ms;
$transition-heading-delay: 600ms;
$transition-text-time:     900ms;
$transition-text-delay:    1200ms;
$transition-image-time:    1250ms;
$transition-image-delay:   1500ms;

// Hero image transition classes
.c-homepage-hero__image-1-appear,
.c-homepage-hero__image-2-appear,
.c-homepage-hero__image-3-appear {
  opacity: 0;
  transform-style: preserve-3d;
  transform-origin: 75% center;
  perspective: 1000px;
  transform: translateY(5rem) rotateX(-5deg);
}

.c-homepage-hero__image-1-appear-active,
.c-homepage-hero__image-1-appear-done,
.c-homepage-hero__image-2-appear-active,
.c-homepage-hero__image-2-appear-done,
.c-homepage-hero__image-3-appear-active,
.c-homepage-hero__image-3-appear-done {
  opacity: 1;
  transform: translateY(0) rotateX(0);
  transition: all $transition-image-time $transition-image-delay var(--v-transition-function);
}

.c-homepage-hero__image-1-appear picture,
.c-homepage-hero__image-2-appear picture,
.c-homepage-hero__image-3-appear picture {
  opacity: 0;
}

.c-homepage-hero__image-1-appear-active picture,
.c-homepage-hero__image-2-appear-active picture,
.c-homepage-hero__image-3-appear-active picture {
  opacity: 1;
  transition: opacity 2s $transition-image-delay + 600ms var(--v-transition-function-easy);
}

// Staggered values for the iamge
.c-homepage-hero__image-2-appear-active {
  transition-delay: $transition-image-delay * 1.2;
}

.c-homepage-hero__image-3-appear-active {
  transition-delay: $transition-image-delay * 1.4;
}

// Hero heading transition classes
.transition-homepage-hero__heading-appear span {
  opacity: 0;
  transform-style: preserve-3d;
  transform-origin: 75% center;
  perspective: 100px;
  transform: translateY(2rem) rotateX(-5deg);
}

.transition-homepage-hero__heading-appear-active span,
.transition-homepage-hero__heading-appear-done span {
  opacity: 1;
  transform: translateY(0) rotateX(0);
  transition: all $transition-heading-time $transition-heading-delay var(--v-transition-function);
}

@for $i from 1 through 16 {
  .transition-homepage-hero__heading-appear-active span:nth-child(#{$i}) {
    transition-delay: $transition-heading-delay + ($i * 50);
  }
}

// Hero text transition classes
.transition-homepage-hero__text-appear * {
  opacity: 0;
  transform: translateY(1.5rem);
}

.transition-homepage-hero__text-appear-active *,
.transition-homepage-hero__text-appear-done * {
  opacity: 1;
  transform: translateY(0);
  transition: all $transition-text-time $transition-text-delay var(--v-transition-function);
}

@for $i from 1 through 5 {
  .transition-homepage-hero__text-appear-active p:nth-child(#{$i}) {
    transition-delay: $transition-text-delay + ($i * 200);
  }
}

